<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/toolbar"
              android:layout_width="wrap_content"
              android:layout_height="50dp"
              android:layout_gravity="bottom|center"
              android:orientation="horizontal" >
    <ImageButton
        android:id="@+id/new_drawing_btn"
        style="@style/tool_button"
        android:contentDescription="@string/new_drawing"
        android:src="@drawable/create_new"/>

    <ImageButton
        android:id="@+id/palette_btn"
        style="@style/tool_button"
        android:contentDescription="@string/palette"
        android:src="@drawable/palette"/>

    <ImageButton
        android:id="@+id/brush_btn"
        style="@style/tool_button"
        android:contentDescription="@string/brush"
        android:src="@drawable/brush"/>

    <ImageButton
        android:id="@+id/add_img_btn"
        style="@style/tool_button"
        android:src="@drawable/add_image"/>

    <ImageButton
        android:id="@+id/eraser_btn"
        style="@style/tool_button"
        android:contentDescription="@string/erase"
        android:src="@drawable/eraser"/>

    <ImageButton
        android:id="@+id/save_btn"
        style="@style/tool_button"
        android:contentDescription="@string/save"
        android:src="@drawable/save_as"/>
</LinearLayout>